--- a/Clases/Clase6-Desafio3/index.html
+++ b/Clases/Clase6-Desafio3/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<head>
-  <title>Register form</title>
+  <title>JOIN THE ARMY</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
   
   <form id="registration-form">
 
-    <h1>YOUR INFORMATION</h1>
+    <h1>JOIN THE ARMY</h1>
 
     <label for="first-name">First Name:</label>
     <input type="text" id="first-name" name="first-name" required pattern="[A-Za-z]+" />
@@ -49,6 +49,6 @@
   </form>
 
   <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 </body>
 </html>
-
