--- a/Clases/Clase6-Desafio3/index.html
+++ b/Clases/Clase6-Desafio3/index.html
@@ -6,7 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>ARGENTINIAN ARMY</title>
+  <link rel="icon" href="argentina.png" />
+
+  <title > ARGENTINIAN ARMY</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
