--- a/Evaluativo JavaScript/index.html
+++ b/Evaluativo JavaScript/index.html
@@ -17,17 +17,25 @@
        <h2 class="section-title">Your movie filter</h2>
        <form id="search-form">
          <div>
-           <label for="from-date-input"> Date filter</label>
+
+
+           <label for="from-date-input">Date</label>
+
+
            <input class="from-date-input" type="date" id="from-date-input" placeholder="">
          </div>
          <div>
            <input class="to-date-input" type="date" id="to-date-input" placeholder="">
          </div>
+
          <div>
-           <label for="rating-input">Rating</label>
-           <input class="from-rating-input" type="number" id="rating-input" min="0" max="10" step="0.1" placeholder="From">
-           <input class="to-rating-input" type="number" id="rating-input" min="1" max="10" step="2" placeholder="To">
+           <label for="rate-input">Rating</label>
+
+           <input class="from-rate-input" type="number" id="rate-input" min="0" max="10" step="0.1" placeholder="From">
+
+           <input class="to-rate-input" type="number" id="rate-input" min="1" max="10" step="2" placeholder="To">
          </div>
+
          <div>
            <label for="userId-input">User ID</label>
            <input type="number" id="userId-input"  min="0" max="100" step="1">
