last touches, website icon

--- a/Evaluativo JavaScript/index.html
+++ b/Evaluativo JavaScript/index.html
@@ -3,8 +3,10 @@
  <html>
  <head>
    <title>MOVIE TIME</title>
- 
+   
+   <link rel="icon" type="image/png" href="img/pelicula.png">
    <link rel="stylesheet" type="text/css" href="styles.css">
+
    <link href="https://fonts.googleapis.com/css?family=Roboto:400,600&display=swap" rel="stylesheet">
  </head>
  <body>
@@ -57,3 +59,5 @@
  </body>
  </html>
  
+
+ <!-- La funcion que permita filtrar el rating esta proxima a ser resuelta -->
