--- a/Clases/Clase12-Desafio5/clase12-desafio5/index.html
+++ b/Clases/Clase12-Desafio5/clase12-desafio5/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg+xml" href="./img/git.jpg" />
+    <link rel="icon" type="image/jpg+xml" href="./src/assets/git.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge N5</title>
   </head>
